# django-docker-postgres-boilerplate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
core/project/settings/: main.py
