[tool.poetry]
name = "django-core"
version = "0.1.0"
description = ""
authors = ["Lymar Volodymyr <shaxtar11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
django = "^5.1.2"
psycopg2 = "^2.9.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
